--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 801px) and (max-width: 2000px) {
     #web {
-      width: 500px;
+      width: 90%;
       height: 600px;
 
     }
@@ -8,7 +8,7 @@
   
   @media screen and (min-width: 601px) and (max-width: 800px) {
     #web {
-      width: 500px;
+      width: 90%;
       height: 600px;
      
     }
