--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ header .header-right .hamburger div {
   }
 
   .post{
-    width: 90%;
+    width: 400px;
     height: 600px;
     margin: 50px;
     padding: 50px;
