--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
+@media screen and (min-width: 801px) and (max-width: 2000px) {
+ 
+  #post{
+     height: 500px;   
+  }
+}
 
+@media screen and (min-width: 601px) and (max-width: 800px) {
+ 
+  #post{
+    height: 600px;   
+ }
+}
 
 
 * {
@@ -141,7 +153,7 @@ header .header-right .hamburger div {
   .swiper {
     width: 100%;
     height: 500px;
-    background-color: aliceblue;
+  
    padding-top: 50px;
     margin-top: 40px;
     
@@ -185,14 +197,14 @@ header .header-right .hamburger div {
   }
 
   .post img{
-    width: 300px;
+    width: 100%;
     height: 300px;
     padding-top: 30px;
   }
 
   .post{
-    width: 400px;
-    height: 600px;
+    width: 70%;
+    height: 750px;
     margin: 50px;
     padding: 50px;
     box-shadow: 2px 5px 10px#0b2239;
